tests/NormalTests/paczka1/small_fuzzy/85687282.err
Error in line 1: F75GocVi A51 88,3
Error in line 4: F75GocVi A939 24,8
Error in line 3: A939 A907 86,9
Error in line 13: 69Yi3s A51 35,7
